did a bunch of stuff

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,12 @@
 
 <head>
     <title>EV3 Control</title>
+    <style src="./styles/sliders.css"></style>
     <script src="socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
+    <script src="./js/motors.js"></script>
+    <script src="./js/elements.js"></script>
+    <script src="./js/actions.js"></script>
+    <script async src="./js/main.js"></script>
 </head>
 
 <body>
