--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="socket.io/socket.io.js"></script>
     <script src="./js/motors.js"></script>
     <script src="./js/elements.js"></script>
+    <script src="./js/network.js"></script>
     <script src="./js/actions.js"></script>
     <script async src="./js/main.js"></script>
 </head>
