keybinds triggering actions works now

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="./js/elements.js"></script>
     <script src="./js/network.js"></script>
     <script src="./js/actions.js"></script>
+    <script src="./js/keybinds.js"></script>
     <script async src="./js/main.js"></script>
 </head>
 
